--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -9,13 +9,18 @@ $light: 300;
 $regular: 400;
 $medium: 500;
 $semi-bold: 600;
+$almost-bold: 700;
 $bold-typo: 800;
 $black-typo: 900;
 
 // Font Sizes
-$xxx-large: 2.5em; //40px
-$xx-large: 1.875em; //30px
-$x-large: 1.125em; //18px
+$xxxx-large: 2.5em; //40px
+$xxx-large: 2.18em; //35px
+$xx-large: 1.4375em; //23px
+$x-large: 1.25em; //20px
+$nn-medium: 1.1em; // 17.6px
 $n-medium: 1em; //16px
 $x-small: 0.875em; //14px
 $xx-small: 0.75em; //12px
+$xxx-small: 0.275em; //8px
+
