--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -1,5 +1,30 @@
 .main {
+  &__title {
+    text-align: center;
+    font-family: $montserrat;
+    font-size: $xx-large;
+  }
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__article {
+    width: 80%;
+  }
   &__image {
-    width: 90%;
+    width: 100%;
+  }
+  &__article-text {
+    line-height: 1.3;
+    font-weight: $bold-typo;
+    font-size: $nn-medium;
+    margin: 0.5em 0;
+
+  }
+  &__article-subtext {
+    color: $granitegray;
+    font-size: $x-small;
+
   }
 }
