--- a/assets/sass/layout/_profile.scss
+++ b/assets/sass/layout/_profile.scss
@@ -1,10 +1,34 @@
 .profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   &__image {
+    display: inline-block;
+    position: relative;
+    width: 3.8em;
+    height: 3.8em;
+    overflow: hidden;
     border-radius: 50%;
-    height: 4em;
+  }
+  &__image--rounded {
+    width: auto;
+    height: 100%;
+  }
+  &__text {
+    flex-direction: column;
+    margin: 1em;
   }
   &__title {
+    font-family: $montserrat;
+    font-weight: $almost-bold;
+    font-size: $x-large;
+    margin: 0;
   }
   &__description {
+    color: $quicksilver;
+    font-size: $x-small;
+    margin: -0.25em 0 0 0;
+  
   }
 }
