--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -16,6 +16,7 @@ $black-typo: 900;
 // Font Sizes
 $xxxx-large: 2.5em; //40px
 $xxx-large: 2.18em; //35px
+$xi-large: 2em;
 $xx-large: 1.4375em; //23px
 $x-large: 1.25em; //20px
 $nn-medium: 1.1em; // 17.6px
