--- a/assets/sass/components/_mybuttons.scss
+++ b/assets/sass/components/_mybuttons.scss
@@ -2,8 +2,12 @@
 //display block in desktop
 
 .button--primary {
-
+  color: $bg-white;
+  border-radius: 0;
+  background-color: $ciel;
 }
 .button--secondary {
-  
+  color: $bg-white;
+  border-radius: 0;
+  background-color: $salmon;
 }
