--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -2,13 +2,19 @@ $bg-white: #ffffff;
 $isabeline: #ECECEC;
 $lightgray: #d1d1d1;
 $smokyblack: #0c0910;
+$blackish: #001514;
 $granitegray: #646266;
 $quicksilver: #a6a5a8;
+$salmon: #ef6461;
+$ciel: #92dce5;
+
+
 
 
 $breakpoints: (
-  'medium': (min-width: 576px),
-  'large': (min-width: 768px),
-  'huge': (min-width: 992px),
-  'x-huge': (min-width: 1200px)
+  'sm': (min-width: 576px),
+  'md': (min-width: 768px),
+  'lg': (min-width: 992px),
+  'xl': (min-width: 1200px),
+  'xxl': (min-width: 1400px)
 );
