--- a/assets/sass/layout/_banner.scss
+++ b/assets/sass/layout/_banner.scss
@@ -1,6 +1,12 @@
 .banner {
-  background-image: url('../img/image-banner.png');
+  background-image: url("../img/image-banner.png");
   height: 4.25em;
   background-position: center;
   background-size: cover;
+}
+
+@include respond-to("md") {
+  .banner {
+    height: 11.8em;
+  }
 }
